--- a/package.json
+++ b/package.json
@@ -9,30 +9,36 @@
     "lint": "eslint",
     "prisma:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
-    "test": "vitest run"
+  "test": "vitest run",
+  "test:cloudinary": "tsx src/scripts/test-cloudinary.ts",
+  "test:cloudinary:images": "tsx src/scripts/test-cloudinary-images.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.460.0",
     "next": "15.5.4",
+    "next-cloudinary": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcryptjs": "^2.4.6",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.16.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4",
-    "typescript": "^5",
     "tsx": "^4.19.1",
+    "typescript": "^5",
     "vitest": "^2.1.4"
   },
   "prisma": {
