--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "eslint",
     "prisma:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
-  "test": "vitest run",
-  "test:cloudinary": "tsx src/scripts/test-cloudinary.ts",
-  "test:cloudinary:images": "tsx src/scripts/test-cloudinary-images.ts"
+    "test": "vitest run",
+    "test:cloudinary": "tsx src/scripts/test-cloudinary.ts",
+    "test:cloudinary:images": "tsx src/scripts/test-cloudinary-images.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -24,6 +26,7 @@
     "next-cloudinary": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
