--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.460.0",
     "next": "15.5.4",
     "next-cloudinary": "^6.10.0",
@@ -42,6 +44,7 @@
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^2.1.4"
   },
