--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.460.0",
-    "next": "15.5.4",
+    "next": "^16.0.10",
     "next-cloudinary": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
